--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "compose-function": "^3.0.3",
+    "i18next": "^23.7.19",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.2",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2"
   },
