--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.2"
+    "react-router-dom": "^6.21.2",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/compose-function": "^0.0.33",
