--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "@types/react-scroll": "^1.8.10",
     "@types/swiper": "^6.0.0",
     "axios": "^1.6.5",
     "compose-function": "^3.0.3",
@@ -23,6 +24,7 @@
     "react-i18next": "^14.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
+    "react-scroll": "^1.9.0",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
