feat: merge conflicts profile_page

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-BASE_URL = https://jsonplaceholder.typicode.com
+# BASE_URL = https://jsonplaceholder.typicode.com
+VITE_BASE_URL = https://ad.cubinc.uz/advblog/api
+# VITE_BASE_URL = https://474d-213-230-114-191.ngrok-free.app
