fix: run preview removed

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,5 @@ jobs:
         run: npm install
       - name: Build Project
         run: npm run build
-      - name: Deploy to Vercel
-        run: npm run preview
+      # - name: Deploy to Vercel
+      #   run: npm run preview
