--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
 
       - name: setup git config
         run: |
@@ -45,7 +45,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.DROPLET_IP }}
-          username: cube
+          username: root
           password: ${{ secrets.DROPLET_PASSWORD }}
           port: 22
           script: |
@@ -53,3 +53,4 @@ jobs:
             docker rm test-app || true
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/test-app:latest
             docker run -d --name test-app -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/test-app:latest
+            docker ps
