--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-i18next": "^14.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
