fix: change domen to cubinc

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # BASE_URL = https://jsonplaceholder.typicode.com
 VITE_BASE_URL = https://ad.cubinc.uz/advblog/api
+VITE_REDIRECT_URL = https://ad.cubinc.uz
 # VITE_BASE_URL = https://474d-213-230-114-191.ngrok-free.app
