--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
-# BASE_URL = https://jsonplaceholder.typicode.com
 VITE_BASE_URL = https://ad.cubinc.uz/advblog/api
 VITE_REDIRECT_URL = https://ad.cubinc.uz
-# VITE_BASE_URL = https://474d-213-230-114-191.ngrok-free.app
+# VITE_REDIRECT_URL = http://localhost:5173
+VITE_AUTH_URL = https://auth.cubinc.uz
+# VITE_AUTH_URL = http://localhost:8080
+VITE_REALM = advertisement-blogger
+# VITE_REALM = abdsh
+VITE_REALM_ID = adv-blog-client
+# VITE_REALM_ID = abdsh_client
