--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "async-mutex": "^0.4.1",
     "axios": "^1.6.5",
     "compose-function": "^3.0.3",
+    "framer-motion": "^11.0.20",
     "i18next": "^23.7.19",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-i18next": "^14.0.1",
@@ -44,9 +46,9 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "prettier": "^3.2.5",
     "sass": "^1.70.0",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8",
-    "prettier": "^3.2.5"
+    "vite": "^5.0.8"
   }
 }
