--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-toast": "^1.1.5",
     "@reduxjs/toolkit": "^2.0.1",
     "@types/react-scroll": "^1.8.10",
     "@types/swiper": "^6.0.0",
     "async-mutex": "^0.4.1",
     "axios": "^1.6.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "compose-function": "^3.0.3",
     "framer-motion": "^11.0.20",
     "i18next": "^23.7.19",
@@ -23,6 +26,7 @@
     "i18next-http-backend": "^2.4.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.372.0",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
@@ -32,12 +36,14 @@
     "react-router-dom": "^6.21.2",
     "react-scroll": "^1.9.0",
     "swiper": "^11.0.5",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/compose-function": "^0.0.33",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20.11.5",
+    "@types/node": "^20.12.7",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-modal": "^3.16.3",
@@ -45,11 +51,14 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "sass": "^1.70.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
