--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-i18next": "^14.0.1",
+    "react-intersection-observer": "^9.10.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-scroll": "^1.9.0",
