--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@reduxjs/toolkit": "^2.0.1",
     "@types/react-scroll": "^1.8.10",
@@ -20,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "compose-function": "^3.0.3",
+    "embla-carousel-react": "^8.0.2",
     "framer-motion": "^11.0.20",
     "i18next": "^23.7.19",
     "i18next-browser-languagedetector": "^7.2.0",
