feat: display post

--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tiptap/extension-bold": "^2.4.0",
     "@tiptap/extension-code": "^2.3.2",
+    "@tiptap/extension-document": "^2.4.0",
+    "@tiptap/extension-hard-break": "^2.4.0",
     "@tiptap/extension-link": "^2.3.2",
+    "@tiptap/extension-paragraph": "^2.4.0",
+    "@tiptap/extension-text": "^2.4.0",
     "@tiptap/extension-underline": "^2.3.2",
     "@tiptap/pm": "^2.3.2",
     "@tiptap/react": "^2.3.2",
