feat: merge and fix conflicts

--- a/package.json
+++ b/package.json
@@ -15,7 +15,14 @@
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.0.3",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tiptap/extension-code": "^2.3.2",
+    "@tiptap/extension-link": "^2.3.2",
+    "@tiptap/extension-underline": "^2.3.2",
+    "@tiptap/pm": "^2.3.2",
+    "@tiptap/react": "^2.3.2",
+    "@tiptap/starter-kit": "^2.3.2",
     "@types/react-scroll": "^1.8.10",
     "@types/swiper": "^6.0.0",
     "async-mutex": "^0.4.1",
