--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/swiper": "^6.0.0",
     "async-mutex": "^0.4.1",
     "axios": "^1.6.5",
+    "centrifuge": "^5.2.0-beta.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "compose-function": "^3.0.3",
