fix: change Chat, Notifications

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 VITE_BASE_URL = https://ad.cubinc.uz/advblog/api
+VITE_BASE_WS_URL = wss://ws.cubinc.uz/connection/websocket
 VITE_REDIRECT_URL = https://ad.cubinc.uz
 # VITE_REDIRECT_URL = http://localhost:5173
 VITE_AUTH_URL = https://auth.cubinc.uz
