feat: download & copy posts

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.0.1",
+    "@sentry/react": "^8.47.0",
     "@tanstack/react-table": "^8.20.5",
     "@tiptap/extension-bold": "^2.4.0",
     "@tiptap/extension-code": "^2.3.2",
@@ -44,6 +45,7 @@
     "@types/swiper": "^6.0.0",
     "async-mutex": "^0.4.1",
     "axios": "^1.6.5",
+    "bluebird": "^3.7.2",
     "centrifuge": "^5.2.0-beta.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -51,11 +53,13 @@
     "compose-function": "^3.0.3",
     "embla-carousel-autoplay": "^8.0.2",
     "embla-carousel-react": "^8.0.2",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.2.0",
     "i18next": "^23.7.19",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
     "js-cookie": "^3.0.5",
+    "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.372.0",
     "react": "^18.2.0",
@@ -70,16 +74,21 @@
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "turndown": "^7.2.0",
     "uuid": "^9.0.1",
     "vaul": "^0.9.1"
   },
   "devDependencies": {
+    "@sentry/vite-plugin": "^2.22.7",
+    "@types/bluebird": "^3.5.42",
     "@types/compose-function": "^0.0.33",
+    "@types/file-saver": "^2.0.7",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-modal": "^3.16.3",
+    "@types/turndown": "^5.0.5",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
