--- a/package.json
+++ b/package.json
@@ -29,23 +29,16 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.0.1",
     "@sentry/react": "^8.47.0",
-    "@tanstack/react-table": "^8.20.5",
-    "@tiptap/extension-bold": "^2.4.0",
-    "@tiptap/extension-code": "^2.3.2",
-    "@tiptap/extension-document": "^2.4.0",
-    "@tiptap/extension-hard-break": "^2.4.0",
     "@tiptap/extension-link": "^2.3.2",
     "@tiptap/extension-paragraph": "^2.4.0",
-    "@tiptap/extension-text": "^2.4.0",
     "@tiptap/extension-underline": "^2.3.2",
     "@tiptap/pm": "^2.3.2",
     "@tiptap/react": "^2.3.2",
     "@tiptap/starter-kit": "^2.3.2",
     "@types/react-scroll": "^1.8.10",
     "@types/swiper": "^6.0.0",
-    "async-mutex": "^0.4.1",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.6.5",
-    "bluebird": "^3.7.2",
     "centrifuge": "^5.2.0-beta.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -60,7 +53,6 @@
     "i18next-http-backend": "^2.4.2",
     "js-cookie": "^3.0.5",
     "jszip": "^3.10.1",
-    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.372.0",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
@@ -80,24 +72,21 @@
   },
   "devDependencies": {
     "@sentry/vite-plugin": "^2.22.7",
-    "@types/bluebird": "^3.5.42",
     "@types/compose-function": "^0.0.33",
     "@types/file-saver": "^2.0.7",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@types/react-modal": "^3.16.3",
     "@types/turndown": "^5.0.5",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
+    "cssnano": "^7.0.6",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "sass": "^1.70.0",
     "tailwindcss": "^3.4.3",
