--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_BASE_URL = https://ad.cubinc.uz/advblog/api
 VITE_BASE_WS_URL = wss://ws.cubinc.uz/connection/websocket
+VITE_APP_ENV = production
