--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,8 +5,6 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-  # workflow_dispatch:
-  #   branches: [main]
 
 jobs:
   build:
@@ -41,7 +39,7 @@ jobs:
       - name: Push Docker Image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/test-app:latest
 
-      - name: SSH to Droplet and Update Container
+      - name: SSH to Droplet and Generate .env File
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.DROPLET_IP }}
@@ -49,6 +47,13 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
+            # Создание .env файла с использованием переменных окружения GitHub Secrets
+            echo "REACT_APP_BACKEND_URL=${{ secrets.VITE_BASE_URL }}" > /path/to/project/.env
+            echo "REACT_APP_WS_URL=${{ secrets.VITE_BASE_WS_URL }}" >> /path/to/project/.env
+            echo "VITE_APP_ENV=${{ secrets.VITE_APP_ENV }}" >> /path/to/project/.env
+            # Дополнительно добавь другие переменные окружения, если нужно
+
+            # Обновление Docker контейнера
             docker stop test-app || true
             docker rm test-app || true
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/test-app:latest
