--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,18 @@ jobs:
       - name: Log in to Docker Hub
         run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
+      - name: Log Secrets
+        run: |
+          echo "VITE_BASE_URL=${{ secrets.VITE_BASE_URL }}"
+          echo "VITE_BASE_WS_URL=${{ secrets.VITE_BASE_WS_URL }}"
+          echo "VITE_APP_ENV=${{ secrets.VITE_APP_ENV }}"
+
+      - name: Create .env File
+        run: |
+          echo "VITE_BASE_URL=${{ secrets.VITE_BASE_URL }}" > .env
+          echo "VITE_BASE_WS_URL=${{ secrets.VITE_BASE_WS_URL }}" >> .env
+          echo "VITE_APP_ENV=${{ secrets.VITE_APP_ENV }}" >> .env
+
       - name: Build Docker Image
         run: |
           docker build --build-arg VITE_BASE_URL=${{ secrets.VITE_BASE_URL }} \
