--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "sass": "^1.70.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-plugin-pwa": "^1.0.0"
   }
 }
