--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     "strict": true,
     // "noUnusedLocals": true,
     // "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["vite-plugin-pwa/client"]
   },
   "include": ["src", "shadcn.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
