--- a/package.json
+++ b/package.json
@@ -54,12 +54,14 @@
     "js-cookie": "^3.0.5",
     "jszip": "^3.10.1",
     "lucide-react": "^0.372.0",
+    "pdfjs-dist": "^5.3.31",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-i18next": "^14.0.1",
     "react-intersection-observer": "^9.10.1",
+    "react-pdf": "^10.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-scroll": "^1.9.0",
