--- a/deploy.env
+++ b/deploy.env
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND_URL=${{ secrets.VITE_BASE_URL }}
+VITE_BASE_URL = https://api.cubinc.uz/advblog/api
+VITE_BASE_WS_URL = wss://rt.cubinc.uz/connection/websocket
