--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     // "noUnusedLocals": true,
     // "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["vite-plugin-pwa/client"]
+    // "types": ["vite-plugin-pwa/client"]
   },
   "include": ["src", "shadcn.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
