--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "i18next-http-backend": "^2.4.2",
     "js-cookie": "^3.0.5",
     "jszip": "^3.10.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.372.0",
     "pdfjs-dist": "^5.3.31",
     "react": "^18.2.0",
@@ -77,6 +78,7 @@
     "@types/compose-function": "^0.0.33",
     "@types/file-saver": "^2.0.7",
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
