--- a/deploy.env
+++ b/deploy.env
@@ -1,2 +1,2 @@
-VITE_BASE_URL = https://api.cubinc.uz/advblog/api
-VITE_BASE_WS_URL = wss://rt.cubinc.uz/connection/websocket
+#VITE_BASE_URL = https://api.cubinc.uz/advblog/api
+#VITE_BASE_WS_URL = wss://rt.cubinc.uz/connection/websocket
