--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,12 @@
 server {
-        server_name _;
-        listen 80 default_server;
-        listen [::]:80 default_server;
+    server_name _;
+    listen 80 default_server;
+    listen [::]:80 default_server;
 
-        location / {
-          root /var/www/html;
-          try_files $uri /index.html;
-        }
+    root /usr/share/nginx/html;
+
+    location / {
+        index index.html;
+        try_files $uri $uri/ /index.html;
+    }
 }
