--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,69 +1,53 @@
-# name: Deploy Frontend to Droplet
+name: Deploy to Amazon EKS with Docker Hub
 
-# on:
-#   push:
-#     branches: [main]
-#   pull_request:
-#     branches: [main]
+on:
+  push:
+    branches:
+      - main
 
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
+env:
+  AWS_REGION: eu-north-1
+  EKS_CLUSTER_NAME: Blogix-prod
+  K8S_NAMESPACE: default
+  DOCKER_IMAGE: abddssh/advblog-frontend
+  DEPLOYMENT_NAME: frontend-deployment
+  CONTAINER_NAME: adv-blog-front
 
-#     steps:
-#       - name: Checkout Code
-#         uses: actions/checkout@v3
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
 
-#       - name: Set up Node.js
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: 18
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-#       - name: setup git config
-#         run: |
-#           git config user.name "Github Actions Bot"
-#           git config user.email "<>"
+      - name: Set image tag
+        id: vars
+        run: echo "TAG=$(date +%Y%m%d%H%M%S)" >> $GITHUB_ENV
 
-#       - name: Install Dependencies
-#         run: npm install --force
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-#       - name: Log in to Docker Hub
-#         run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+      - name: Build and push Docker image
+        run: |
+          docker build -t $DOCKER_IMAGE:${TAG} .
+          docker push $DOCKER_IMAGE:${TAG}
 
-#       - name: Log Secrets
-#         run: |
-#           echo "VITE_BASE_URL=${{ secrets.VITE_BASE_URL }}"
-#           echo "VITE_BASE_WS_URL=${{ secrets.VITE_BASE_WS_URL }}"
-#           echo "VITE_APP_ENV=${{ secrets.VITE_APP_ENV }}"
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
 
-#       - name: Create .env File
-#         run: |
-#           echo "VITE_BASE_URL=${{ secrets.VITE_BASE_URL }}" > .env
-#           echo "VITE_BASE_WS_URL=${{ secrets.VITE_BASE_WS_URL }}" >> .env
-#           echo "VITE_APP_ENV=${{ secrets.VITE_APP_ENV }}" >> .env
+      - name: Update kubeconfig for EKS
+        run: aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER_NAME }} --region ${{ env.AWS_REGION }}
 
-#       - name: Build Docker Image
-#         run: |
-#           docker build --build-arg VITE_BASE_URL=${{ secrets.VITE_BASE_URL }} \
-#                        --build-arg VITE_BASE_WS_URL=${{ secrets.VITE_BASE_WS_URL }} \
-#                        --build-arg VITE_APP_ENV=${{ secrets.VITE_APP_ENV }} \
-#                        --tag test-app .
-
-#       - name: Tag image
-#         run: docker tag test-app ${{ secrets.DOCKERHUB_USERNAME }}/test-app:latest
-
-#       - name: Push Docker Image
-#         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/test-app:latest
-
-#       - name: SSH to Droplet and Update Container
-#         uses: appleboy/ssh-action@master
-#         with:
-#           host: ${{ secrets.DROPLET_IP }}
-#           username: cube
-#           key: ${{ secrets.SSH_PRIVATE_KEY }}
-#           port: 22
-#           script: |
-#             docker stop test-app || true
-#             docker rm test-app || true
-#             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/test-app:latest
-#             docker run --rm -d --name test-app -p 3000:80 ${{ secrets.DOCKERHUB_USERNAME }}/test-app:latest
+      - name: Update image in Kubernetes
+        run: |
+          kubectl set image deployment/${DEPLOYMENT_NAME} \
+            ${CONTAINER_NAME}=${DOCKER_IMAGE}:${TAG} \
+            -n $K8S_NAMESPACE
