fix: copy post text, channel url, date time flow changed, add/remove from basket texts

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tiptap/pm": "^2.3.2",
     "@tiptap/react": "^2.3.2",
     "@tiptap/starter-kit": "^2.3.2",
+    "@types/markdown-it": "^14.1.2",
     "@types/react-scroll": "^1.8.10",
     "@types/swiper": "^6.0.0",
     "autoprefixer": "^10.4.20",
@@ -56,6 +57,7 @@
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.542.0",
+    "markdown-it": "^14.1.0",
     "pdfjs-dist": "^5.3.31",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
