feat: template posts flow

--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@reduxjs/toolkit": "^2.0.1",
     "@sentry/react": "^8.47.0",
+    "@tiptap/extension-code": "^2.26.3",
     "@tiptap/extension-link": "^2.3.2",
     "@tiptap/extension-paragraph": "^2.4.0",
+    "@tiptap/extension-strike": "^2.26.3",
     "@tiptap/extension-underline": "^2.3.2",
     "@tiptap/pm": "^2.3.2",
     "@tiptap/react": "^2.3.2",
