--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-scroll": "^1.9.0",
+    "recharts": "^3.3.0",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
