--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "embla-carousel-react": "^8.0.2",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.2.0",
+    "gsap": "^3.13.0",
     "i18next": "^23.7.19",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
