--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,scss}\" \"public/**/*.json\"",
     "build": "npm run format && tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
@@ -99,11 +100,13 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jsdom": "^27.4.0",
     "prettier": "^3.2.5",
     "sass": "^1.70.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^6.2.6",
-    "vite-plugin-pwa": "^1.0.0"
+    "vite-plugin-pwa": "^1.0.0",
+    "vitest": "^4.0.18"
   }
 }
